fix z-index

--- a/src/pages/Rules.css
+++ b/src/pages/Rules.css
@@ -28,6 +28,7 @@ z-index: 2;
 
 .slider-image.active {
 opacity: 1;
+z-index: 1;
 }
 
 
@@ -47,9 +48,11 @@ opacity: 1;
   background-color: rgba(0, 0, 0, 0.8);
   opacity: 0;
   transition: opacity 0.1s ease-in-out;
+  z-index: 999;
   }
 
 .text-box:hover {
-opacity: 1;
+  opacity: 1;
+  /* z-index: 1222; */
 }
 
